# qt-starter

./: .gitignore  README.md  pyproject.toml
src/: run.py
src/qt_starter/: views.py
tests/: test_qt_starter.py
