[tool.poetry]
name = "qt-starter"
version = "0.1.0"
description = ""
authors = ["tnahs <31777797+tnahs@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.8.0"
pyside2 = "^5.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "^0.782"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
