[tool.poetry]
name = "qt-starter"
version = "0.1.0"
description = ""
authors = ["tnahs <31777797+tnahs@users.noreply.github.com>"]

[tool.poetry.dependencies]
# NOTE: This must be set to an exact version for `PySide6` to work.
python = "3.10.6"
PySide6 = "^6.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
